<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mmanjaag7alumnes.edu.ub.examenfinal.ActivityModificaDespesa">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#CCFFFFFF"
        android:gravity="center"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#e71414"
            android:textSize="30dp"
            android:text="Modifica Despesa"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:layout_marginTop="120dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantidadDespesa"
            android:id="@+id/cantidadDespesa"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:textSize="20dp"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/cantidadDespesa1"
            android:textColor="#000000"
            android:layout_marginLeft="100dp"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dataDespesa"
            android:id="@+id/dataDespesa"
            android:textColor="#000000"
            android:layout_marginTop="55dp"
            android:textSize="20dp"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/dataDespesa1"
            android:textColor="#000000"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="50dp"
            android:textSize="20dp"/>

        <RadioGroup android:id="@+id/finalizada"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Rb1"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="120dp"
                android:text="@string/casa"/>

            <RadioButton android:id="@+id/Rb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:text="@string/familia" />

            <RadioButton android:id="@+id/Rb3"
                android:layout_width="wrap_content"
                android:layout_marginTop="120dp"
                android:layout_height="wrap_content"
                android:text="@string/amigos" />
        </RadioGroup>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:layout_marginLeft="50dp"
            android:id="@+id/cancelarDespesa"
            android:text="@string/cancelar"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:layout_marginLeft="200dp"
            android:id="@+id/aceptarDespesa"
            android:text="@string/aceptar"/>

    </RelativeLayout>

</RelativeLayout>
