<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mmanjaag7alumnes.edu.ub.examenfinal.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#CCFFFFFF"
        android:gravity="center"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:textColor="#e71414"
            android:textSize="30dp"
            android:text="Control despeses, prestecs i deutes"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:gravity="center"
        android:layout_marginTop="150dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDespesa"
            android:text="@string/btnDespesa"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:id="@+id/btnPrestec"
            android:text="@string/btnPrestec"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDeute"
            android:layout_marginTop="100dp"
            android:text="@string/btnDeute"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guardar"
            android:layout_marginTop="150dp"
            android:text="Guardar"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cargar"
            android:layout_marginTop="200dp"
            android:text="Cargar"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/salir"
            android:layout_marginTop="250dp"
            android:text="@string/btnSalir"/>

    </RelativeLayout>
</RelativeLayout>
