<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mmanjaag7alumnes.edu.ub.examenfinal.ActivityDeutes">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#CCFFFFFF"
        android:gravity="center"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="#e71414"
            android:textSize="30dp"
            android:text="Control Deutes"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="150dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAgregaDeutes"
            android:layout_marginLeft="20dp"
            android:text="@string/btnAgregaDeute"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:id="@+id/btnMostrarDeutes"
            android:text="@string/btnMostrarDeutes"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/salirDeutes"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="20dp"
            android:text="@string/btnSalir"/>

    </RelativeLayout>

</RelativeLayout>
