<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mmanjaag7alumnes.edu.ub.examenfinal.ActivityPrestecs">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#CCFFFFFF"
        android:gravity="center"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="#e71414"
            android:textSize="30dp"
            android:text="Control Préstecs"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="150dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAgregaPrestec"
            android:layout_marginLeft="25dp"
            android:text="@string/btnAgregaPrestec"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:id="@+id/btnMostrarPrestec"
            android:text="@string/btnMostrarPrestec"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/salirPrestec"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="35dp"
            android:text="@string/btnSalir"/>

    </RelativeLayout>

</RelativeLayout>
